kubernetes/apps/flaresolverr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
spec:
  selector:
    app: flaresolverr
  ports:
    - name: http
      port: 8191
      targetPort: 8191
      protocol: TCP
  type: ClusterIP
